--- a/Views/Shared/Footer.cshtml
+++ b/Views/Shared/Footer.cshtml
@@ -1,1 +1,40 @@
-﻿﻿<h1> Footer </h1>
+﻿@{
+    var listMenu = new rep.Models.Menu.ListMenu();
+    string userRole = ViewBag.UserRole;
+}
+<footer>
+    <div>
+        <nav>
+            <ul>
+                @if (User.Identity.IsAuthenticated == false)
+                {
+                    @foreach (var item in listMenu.GuestFooterMenu)
+                    {
+                        <li class="footerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                }
+                else if (userRole == "user")
+                {
+                    @foreach (var item in listMenu.UserFooterMenu)
+                    {
+                        <li class="footerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                }
+                else if (userRole == "admin")
+                {
+                    @foreach (var item in listMenu.AdminFooterMenu)
+                    {
+                        <li class="footerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                }
+                else if (userRole == "teacher")
+                {
+                    @foreach (var item in listMenu.TeacherFooterMenu)
+                    {
+                        <li class="footerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                }
+            </ul>
+        </nav>
+    </div>
+</footer>
