--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -1,5 +1,44 @@
-﻿﻿
-<li>
-    <ul><a asp-controller="News" asp-action="News">News</a></ul>
-    <ul><a asp-controller="AddProduct" asp-action="Add">Add Product</a></ul>
-</li>
+﻿@{
+    var listMenu = new rep.Models.Menu.ListMenu();
+    string userRole = ViewBag.UserRole;
+}
+
+<header>
+    <div class="divHeader">
+        <nav>
+            <ul>
+                @if (User.Identity!.IsAuthenticated == false)
+                {
+                    @foreach (var item in listMenu.HeaderMenu)
+                    {
+                        <li class="headerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                }    
+                else if (userRole == "user")
+                {
+                    @foreach (var item in listMenu.UserHeaderMenu)
+                    {
+                        <li class="headerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                    <p style="font-size: 10pt;">Добро пожаловать, @User.Identity.Name!</p>
+                }
+                else if (userRole == "admin")
+                {
+                    @foreach (var item in listMenu.AdminHeaderMenu)
+                    {
+                        <li class="headerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                    <p style="font-size: 10pt;">Добро пожаловать, @User.Identity.Name!</p>
+                }
+                else if (userRole == "teacher")
+                {
+                    @foreach (var item in listMenu.TeacherHeaderMenu)
+                    {
+                        <li class="headerli"><button class="btn btn-primary"><a class="aClass" href="@Url.Action(item.Action, item.Controller)">@item.Label</a></button></li>
+                    }
+                    <p style="font-size: 10pt;">Добро пожаловать, @User.Identity.Name!</p>
+                }
+            </ul>
+        </nav>
+    </div>
+</header>
