--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,19 +1,20 @@
-﻿@await Html.PartialAsync("Header")
+﻿@model List<rep.Models.DbModels.Material>
+<main>
+    <section id="about">
+        <div class="container">
+            <h2>О нас</h2>
+            <p>Мы — Школа будущего, стремящаяся создать инновационные образовательные программы для подготовки лидеров завтрашнего дня.</p>
+            <p>Наша миссия состоит в том, чтобы развивать учеников во всем их многообразии, поддерживая их творческие стремления и интеллектуальный рост.</p>
+        </div>
+    </section>
 
-<div class ="maindiv">
-    <h2>
-        Welcome To Shkolkovo
-    </h2>
-    <p>
-        Let's go start lessons
-    </p>
-    <p>
-        Cool
-    </p>
-    <div class="navigation">
-        <button type="button" class="navbutton" onclick="window.location.href='@Url.Action("Index","About")'">About Teachers</button>
-        <button type="button" class="navbutton" onclick="window.location.href='@Url.Action("Index","Schedule")' ">About Schedule</button>
-        <button type="button" class="navbutton" onclick="window.location.href='@Url.Action("Index","Courses")' ">About Courses</button>
-    </div>
-</div>
-@await Html.PartialAsync("Footer")
+    <section id="programs">
+        <div class="container">
+            <h2>Программы</h2>
+            @foreach (var programm in Model)
+            {
+            <li>@programm.MaterialTitle</li>
+            }
+        </div>
+    </section>
+</main>
