--- a/Views/Home/Materials.cshtml
+++ b/Views/Home/Materials.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<rep.Models.DbModels.Material>
+﻿
+@model List<rep.Models.DbModels.Material>
 <main>
     <h2 style="margin-left:20px">Учебные материалы</h2>
     @foreach(var mater in Model)
