--- a/Views/Main/Users.cshtml
+++ b/Views/Main/Users.cshtml
@@ -35,4 +35,40 @@
 
         <button class="btn btn-primary" type="submit">Добавить</button>
     }
+    @using (Html.BeginForm("DeleteUser", "Main", FormMethod.Post))
+    {
+        <h1>Удалить пользователя</h1>
+        <div>
+            <label for="userId">Id пользователя:</label>
+            @Html.TextBox("userId", null, new { @style = "height: 30px", @class = "form-control", required = "required" })
+        </div>
+
+        <button class="btn btn-primary" type="submit">Удалить</button>
+    }
+    @using (Html.BeginForm("EditUser", "Main", FormMethod.Post))
+    {
+        <h1>Редактировать пользователя</h1>
+        <div>
+            <label for="editlogin">ID:</label>
+            @Html.TextBox("UserID", null, new { @style = "height: 30px", @class = "form-control", required = "required" })
+        </div>
+        <div>
+            <label for="editlogin">Логин:</label>
+            @Html.TextBox("UserName", null, new { @style = "height: 30px", @class = "form-control", required = "required" })
+        </div>
+        <div>
+            <label for="editpassword">Пароль:</label>
+            @Html.Password("UserPassword", null, new { @style = "height: 30px", @class = "form-control", required = "required" })
+        </div>
+        <div>
+            <label for="role">Роль:</label>
+            @Html.DropDownList("UserRole", new SelectList(new[] {
+        new SelectListItem { Text = "Пользователь", Value = "user" },
+        new SelectListItem { Text = "Администратор", Value = "admin" },
+        new SelectListItem { Text = "Преподаватель", Value = "teacher" },
+        }, "Value", "Text"), "Выберите роль", new { @class = "form-control", required = "required" })
+        </div>
+
+        <button class="btn btn-primary" type="submit">Добавить</button>
+    }
 </main>
